--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
+    "react-google-maps": "^9.4.5",
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
     "web-vitals": "^3.5.2"
