--- a/package.json
+++ b/package.json
@@ -3,18 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-google-maps/api": "^2.19.3",
     "axios": "^1.6.8",
     "backendless": "^7.3.1",
+    "date-fns": "^3.6.0",
+    "geolib": "^3.3.4",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
-    "react-google-maps": "^9.4.5",
+    "react-leaflet": "^4.2.1",
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^3.5.2"
-  },
-  "devDependencies": {
-    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
